3.0.3
- P4A_Thumbnail_Generator now supports ie's pjpeg extension
- a bug with P4A_I18N::_format() method was solved
  (YYYY was changed to yyyy)
- P4A_Field::setYearRange() method was added to be able to
  manage the year range in the datepicker
- 10px top padding was added to P4A_Fieldset

3.0.2
- a small change was done on P4A_Array_Source to enable the usage of empty
  array_sources without warnings
- tooltips are now automatically translated at rendering time
- P4A_DB_Source::saveRow() now reads pk values back from
  Zend_DB_Table::insert() gaining better functionality with
  auto increment primary keys
- jQuery UI was updated to 1.5.2
- a small bug with P4A_I18N::_normalize() method was solved
- p4a_focus_set() javascript function was reworked to avoid a
  javascript warning in firebug
- loading a P4A_Array_Source with a simple array of data now
  does not create the "0" field anymore, it's been renamed to "f0"
  to avoid problems with some PHP configurations with numerical
  object properties

3.0.1
- a bug about session name was solved
- FCKEditor was updated to 2.6.2
- a bug with shadows CSS was solved (unused shadow.png file is not linked
  by screen.css anymore so we've no "file not found" in web server's logs)
- P4A_Error_Handler() global function now uses the P4A::messageWarning()
  wrapper for P4A::message() solving a bug with the warning icon name
  that was changed in 3.0.0-rc5
- jQuery UI was updated to 1.5.1

3.0.0
- P4A_DB_Source::addJoin*() methods now support the schema name as the last
  param
- FCKEditor was updated to 2.6.1
- P4A_EXCEPTION_HANDLER and P4A_ERROR_HANDLER constants were added so now
  you can set your own error/exception handlers
- a few comments where added to P4A_DB_Source
- a small change was done in P4A_Redirect_To_File() global function
  (index.php link was forced)
- a small bug with file download button (within file P4A_Field) on
  windows server was solved (generated file name is now correct)